--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "application-name",
+  "name": "Webserver",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -13,8 +13,8 @@
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "jade": "~1.3.0",
-	"mongodb": "*",
-	"monk": "*",
-	"ejs": "*"
+	  "mongodb": "*",
+	  "monk": "*",
+	  "ejs": "*"
   }
 }
