--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "morgan": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
+    "method-override": "~1.0.2",
     "debug": "~0.7.4",
     "jade": "~1.3.0",
-	  "mongodb": "*",
-	  "monk": "*",
-	  "ejs": "*"
+    "mongodb": "*",
+    "monk": "*",
+    "ejs": "*"
   },
   "main": "app.js"
 }
