--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jade": "~1.3.0",
     "mongodb": "*",
     "monk": "*",
-    "ejs": "*"
+    "ejs": "*",
+    "express-session": "~1.2.0"
   },
   "main": "app.js"
 }
